added a new styling and added favicon

--- a/work.html
+++ b/work.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- favicon -->
+        <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
         <!-- Font Awesome -->
         <link
             rel="stylesheet"
@@ -54,7 +56,8 @@
             </h2>
             <div class="projects">
                 <div class="item">
-                    <h1 class="text-secondary">DevConnector</h1>
+                    <h1 class="text-secondary">DevCon</h1>
+                    <h3>A social network for developers</h3>
                     <a
                         target="_blank"
                         href="https://damp-spire-40434.herokuapp.com"
@@ -82,6 +85,7 @@
 
                 <div class="item">
                     <h1 class="text-secondary">KenSale</h1>
+                    <h3>An online platform for selling livestock</h3>
                     <a
                         target="_blank"
                         href="https://fathomless-inlet-52290.herokuapp.com/"
