--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                 <div class="bio">
                     <h3 class="text-secondary">BIO</h3>
                     <p>
-                        I am a full stack developer. In love with Reactjs.
+                        I am a full stack developer. In love with ReactJs.
                         Currently based in Novi sad, Serbia. I am a self taught
                         and have a great passion for programming. I believe in
                         writing clean and readable code. I enjoy working with
@@ -71,7 +71,7 @@
                     </p>
                     <h3 class="text-secondary">SKILLS</h3>
                     <h5 class="subText">Front-end</h5>
-                    HTML5, CSS3, Javascript, ES6, React
+                    HTML5, CSS3, Javascript, ES6, ReactJs
                     <h5 class="subText">Back-end</h5>
                     NodeJS, APIs, SQL, MongoDB
                     <br />
