fixed some typos

--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
                     <h3 class="text-secondary">BIO</h3>
                     <p>
                         I am a full stack developer. In love with ReactJs.
-                        Currently based in Novi sad, Serbia. I am a self taught
-                        and have a great passion for programming. I believe in
+                        Currently based in Novi Sad, Serbia. I am self-taught
+                        and I have a great passion for programming. I believe in
                         writing clean and readable code. I enjoy working with
                         both front-end and back-end projects.
                     </p>
