--- a/about.html
+++ b/about.html
@@ -56,8 +56,7 @@
             </h2>
             <div class="about-info">
                 <div class="bio">
-                    <h3 class="text-secondary">BIO</h3>
-                    <p>
+                    <p class="bio-text">
                         I am a full stack developer. In love with ReactJs.
                         Currently based in Novi Sad, Serbia. I am self-taught
                         and I have a great passion for programming. I believe in
@@ -65,23 +64,65 @@
                         both front-end and back-end projects.
                     </p>
                     <h3 class="text-secondary">SKILLS</h3>
-                    <h5 class="subText">Front-end</h5>
-                    HTML5, CSS3, Javascript, ES6, ReactJs
-                    <h5 class="subText">Back-end</h5>
-                    NodeJS, APIs, SQL, MongoDB
+
+                    <img
+                        src="./img/icons/html5.png"
+                        title="HTML5"
+                        alt="html5"
+                    />
+                    <img src="./img/icons/css3.png" title="CSS3" alt="css3" />
+                    <img
+                        src="./img/icons/bootstrap.png"
+                        title="BOOTSTRAP"
+                        alt="bootstrap"
+                    />
+                    <img src="./img/icons/sass.png" title="SASS" alt="sass" />
+                    <img
+                        src="./img/icons/javascript.png"
+                        title="JAVASCRIPT"
+                        alt="javascript"
+                    />
+                    <img
+                        src="./img/icons/react.png"
+                        title="REACT"
+                        alt="react"
+                    />
+
+                    <img
+                        src="./img/icons/nodejs.png"
+                        title="NODE"
+                        alt="nodejs"
+                    />
+                    <img src="./img/icons/api.png" title="API" alt="api" />
+                    <img
+                        src="./img/icons/mysql.png"
+                        title="MYSQL"
+                        alt="mysql"
+                    />
+                    <img
+                        src="./img/icons/mongodb.png"
+                        title="MONGODB"
+                        alt="mongodb"
+                    />
+
                     <br />
                     <br />
                     <h3 class="text-secondary">
                         Things I am Currently Learning
                     </h3>
-                    Python & AngularJs
+                    <img
+                        src="./img/icons/angular.png"
+                        title="ANGULAR"
+                        alt="angular"
+                    />
+                    <img
+                        src="./img/icons/python.png"
+                        title="PYTHON"
+                        alt="python"
+                    />
                 </div>
             </div>
         </main>
-
-        <footer id="main-footer">
-            Copyright &copy; 2019
-        </footer>
 
         <script src="js/main.js"></script>
     </body>
