added a new project

--- a/work.html
+++ b/work.html
@@ -110,6 +110,37 @@
                         React , Bootstrap , Node , MySQL
                     </h3>
                 </div>
+
+                <div class="item">
+                    <h1 class="text-secondary">KenWallet</h1>
+                    <h3>
+                        A website where a company can keep notes on how much
+                        clients owe them
+                    </h3>
+                    <a
+                        target="_blank"
+                        href="https://clientpanelprod-35ea1.web.app/"
+                    >
+                        <img src="img/projects/KenWallet.PNG" alt="Project" />
+                    </a>
+                    <a
+                        target="_blank"
+                        href="https://clientpanelprod-35ea1.web.app/"
+                        class="btn-light"
+                    >
+                        <i class="fas fa-eye"></i> Project
+                    </a>
+                    <a
+                        target="_blank"
+                        href="https://github.com/kentiba/KenWallet"
+                        class="btn-dark"
+                    >
+                        <i class="fab fa-github"></i> Github
+                    </a>
+                    <h3 class="subText">
+                        Angular , Bootstrap , Firebase
+                    </h3>
+                </div>
             </div>
         </main>
 
