added react native to my skills

--- a/about.html
+++ b/about.html
@@ -88,6 +88,11 @@
                         alt="react"
                     />
                     <img
+                        src="./img/icons/react-native.png"
+                        title="REACT Native"
+                        alt="react"
+                    />
+                    <img
                         src="./img/icons/angular.png"
                         title="ANGULAR"
                         alt="angular"
