--- a/work.html
+++ b/work.html
@@ -141,6 +141,36 @@
                         Angular , Bootstrap , Firebase
                     </h3>
                 </div>
+
+                <div class="item">
+                    <h1 class="text-secondary">Hacker Next</h1>
+                    <h3>
+                        A hacker news clone made with Next js
+                    </h3>
+                    <a
+                        target="_blank"
+                        href="https://hacker-next.kentiba93.now.sh/"
+                    >
+                        <img src="img/projects/HackerNext.PNG" alt="Project" />
+                    </a>
+                    <a
+                        target="_blank"
+                        href="https://hacker-next.kentiba93.now.sh/"
+                        class="btn-light"
+                    >
+                        <i class="fas fa-eye"></i> Project
+                    </a>
+                    <a
+                        target="_blank"
+                        href="https://github.com/kentiba/Hacker-Next"
+                        class="btn-dark"
+                    >
+                        <i class="fab fa-github"></i> Github
+                    </a>
+                    <h3 class="subText">
+                        Next js
+                    </h3>
+                </div>
             </div>
         </main>
 
