fixed small typo

--- a/work.html
+++ b/work.html
@@ -168,7 +168,7 @@
                         <i class="fab fa-github"></i> Github
                     </a>
                     <h3 class="subText">
-                        Next js
+                        Next js , Node js
                     </h3>
                 </div>
             </div>
