--- a/about.html
+++ b/about.html
@@ -84,22 +84,27 @@
                     />
                     <img
                         src="./img/icons/react.png"
-                        title="REACT"
+                        title="REACT JS"
+                        alt="react"
+                    />
+                    <img
+                        src="./img/icons/Nextjs.png"
+                        title="NEXT JS"
                         alt="react"
                     />
                     <img
                         src="./img/icons/react-native.png"
-                        title="REACT Native"
+                        title="REACT NATIVE"
                         alt="react"
                     />
                     <img
                         src="./img/icons/angular.png"
-                        title="ANGULAR"
+                        title="ANGULAR JS"
                         alt="angular"
                     />
                     <img
                         src="./img/icons/nodejs.png"
-                        title="NODE"
+                        title="NODE JS"
                         alt="nodejs"
                     />
                     <img src="./img/icons/api.png" title="API" alt="api" />
