added graphQL to my skills

--- a/about.html
+++ b/about.html
@@ -114,6 +114,11 @@
                         alt="mysql"
                     />
                     <img
+                        src="./img/icons/graphQl.png"
+                        title="GRAPHQL"
+                        alt="GraphQL"
+                    />
+                    <img
                         src="./img/icons/mongodb.png"
                         title="MONGODB"
                         alt="mongodb"
