--- a/about.html
+++ b/about.html
@@ -88,20 +88,17 @@
                         alt="react"
                     />
                     <img
-                        src="./img/icons/Nextjs.png"
-                        title="NEXT JS"
-                        alt="react"
+                        src="./img/icons/Redux.png"
+                        title="REDUX"
+                        alt="redux"
                     />
+
                     <img
                         src="./img/icons/react-native.png"
                         title="REACT NATIVE"
                         alt="react"
                     />
-                    <img
-                        src="./img/icons/angular.png"
-                        title="ANGULAR JS"
-                        alt="angular"
-                    />
+
                     <img
                         src="./img/icons/nodejs.png"
                         title="NODE JS"
@@ -122,6 +119,12 @@
                         src="./img/icons/mongodb.png"
                         title="MONGODB"
                         alt="mongodb"
+                    />
+
+                    <img
+                        src="./img/icons/heroku.png"
+                        title="HEROKU"
+                        alt="heroku"
                     />
 
                     <br />
