removed angular project

--- a/about.html
+++ b/about.html
@@ -1,138 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <!-- favicon -->
-        <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
-        <!-- Font Awesome -->
-        <link
-            rel="stylesheet"
-            href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-            integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-            crossorigin="anonymous"
-        />
-        <!-- css -->
-        <link rel="stylesheet" href="./css/main.css" />
-        <title>About Me</title>
-    </head>
-    <body>
-        <header>
-            <div class="menu-btn">
-                <div class="btn-line"></div>
-                <div class="btn-line"></div>
-                <div class="btn-line"></div>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <!-- css -->
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>About Me</title>
+  </head>
+  <body>
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
 
-            <div class="menu">
-                <div class="menu-branding">
-                    <div class="portrait"></div>
-                </div>
-                <ul class="menu-nav">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item current">
-                        <a href="about.html" class="nav-link">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="work.html" class="nav-link">My Work</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link"
-                            >How To Reach Me</a
-                        >
-                    </li>
-                </ul>
-            </div>
-        </header>
-        <main id="about">
-            <h1 class="lg-heading">
-                About<span class="text-secondary"> Me</span>
-            </h1>
-            <h2 class="sm-heading">
-                Let me tell you few things...
-            </h2>
-            <div class="about-info">
-                <div class="bio">
-                    <p class="bio-text">
-                        I am a full stack developer. In love with ReactJs.
-                        Currently based in Novi Sad, Serbia. I am self-taught
-                        and I have a great passion for programming. I believe in
-                        writing clean and readable code. I enjoy working with
-                        both front-end and back-end projects.
-                    </p>
-                    <h3 class="text-secondary">SKILLS</h3>
+      <div class="menu">
+        <div class="menu-branding">
+          <div class="portrait"></div>
+        </div>
+        <ul class="menu-nav">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item current">
+            <a href="about.html" class="nav-link">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a href="work.html" class="nav-link">My Work</a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link">How To Reach Me</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main id="about">
+      <h1 class="lg-heading">About<span class="text-secondary"> Me</span></h1>
+      <h2 class="sm-heading">
+        Let me tell you few things...
+      </h2>
+      <div class="about-info">
+        <div class="bio">
+          <p class="bio-text">
+            I am a full stack developer. In love with ReactJs. I am self-taught
+            and I have a great passion for programming. I believe in writing
+            clean and readable code. I enjoy working with both front-end and
+            back-end projects.
+          </p>
+          <h3 class="text-secondary">SKILLS</h3>
 
-                    <img
-                        src="./img/icons/html5.png"
-                        title="HTML5"
-                        alt="html5"
-                    />
-                    <img src="./img/icons/css3.png" title="CSS3" alt="css3" />
-                    <img
-                        src="./img/icons/bootstrap.png"
-                        title="BOOTSTRAP"
-                        alt="bootstrap"
-                    />
-                    <img src="./img/icons/sass.png" title="SASS" alt="sass" />
-                    <img
-                        src="./img/icons/javascript.png"
-                        title="JAVASCRIPT"
-                        alt="javascript"
-                    />
-                    <img
-                        src="./img/icons/react.png"
-                        title="REACT JS"
-                        alt="react"
-                    />
-                    <img
-                        src="./img/icons/Redux.png"
-                        title="REDUX"
-                        alt="redux"
-                    />
+          <img src="./img/icons/html5.png" title="HTML5" alt="html5" />
+          <img src="./img/icons/css3.png" title="CSS3" alt="css3" />
+          <img
+            src="./img/icons/bootstrap.png"
+            title="BOOTSTRAP"
+            alt="bootstrap"
+          />
+          <img src="./img/icons/sass.png" title="SASS" alt="sass" />
+          <img
+            src="./img/icons/javascript.png"
+            title="JAVASCRIPT"
+            alt="javascript"
+          />
+          <img src="./img/icons/react.png" title="REACT JS" alt="react" />
+          <img src="./img/icons/Redux.png" title="REDUX" alt="redux" />
 
-                    <img
-                        src="./img/icons/react-native.png"
-                        title="REACT NATIVE"
-                        alt="react"
-                    />
+          <img
+            src="./img/icons/react-native.png"
+            title="REACT NATIVE"
+            alt="react"
+          />
 
-                    <img
-                        src="./img/icons/nodejs.png"
-                        title="NODE JS"
-                        alt="nodejs"
-                    />
-                    <img src="./img/icons/api.png" title="API" alt="api" />
-                    <img
-                        src="./img/icons/mysql.png"
-                        title="MYSQL"
-                        alt="mysql"
-                    />
-                    <img
-                        src="./img/icons/graphQl.png"
-                        title="GRAPHQL"
-                        alt="GraphQL"
-                    />
-                    <img
-                        src="./img/icons/mongodb.png"
-                        title="MONGODB"
-                        alt="mongodb"
-                    />
+          <img src="./img/icons/nodejs.png" title="NODE JS" alt="nodejs" />
+          <img src="./img/icons/api.png" title="API" alt="api" />
+          <img src="./img/icons/mysql.png" title="MYSQL" alt="mysql" />
+          <img src="./img/icons/graphQl.png" title="GRAPHQL" alt="GraphQL" />
+          <img src="./img/icons/mongodb.png" title="MONGODB" alt="mongodb" />
 
-                    <img
-                        src="./img/icons/heroku.png"
-                        title="HEROKU"
-                        alt="heroku"
-                    />
+          <img src="./img/icons/heroku.png" title="HEROKU" alt="heroku" />
 
-                    <br />
-                    <br />
-                </div>
-            </div>
-        </main>
+          <br />
+          <br />
+        </div>
+      </div>
+    </main>
 
-        <script src="js/main.js"></script>
-    </body>
+    <script src="js/main.js"></script>
+  </body>
 </html>
