--- a/work.html
+++ b/work.html
@@ -1,179 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <!-- favicon -->
-        <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
-        <!-- Font Awesome -->
-        <link
-            rel="stylesheet"
-            href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-            integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-            crossorigin="anonymous"
-        />
-        <!-- css -->
-        <link rel="stylesheet" href="./css/main.css" />
-        <title>View My Work</title>
-    </head>
-    <body>
-        <header>
-            <div class="menu-btn">
-                <div class="btn-line"></div>
-                <div class="btn-line"></div>
-                <div class="btn-line"></div>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <!-- css -->
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>View My Work</title>
+  </head>
+  <body>
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
 
-            <div class="menu">
-                <div class="menu-branding">
-                    <div class="portrait"></div>
-                </div>
-                <ul class="menu-nav">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a href="about.html" class="nav-link">About Me</a>
-                    </li>
-                    <li class="nav-item current">
-                        <a href="work.html" class="nav-link">My Work</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link"
-                            >How To Reach Me</a
-                        >
-                    </li>
-                </ul>
-            </div>
-        </header>
-        <main id="work">
-            <h1 class="lg-heading">
-                My<span class="text-secondary"> Work</span>
-            </h1>
-            <h2 class="sm-heading">
-                Check out some of my projects...
-            </h2>
-            <div class="projects">
-                <div class="item">
-                    <h1 class="text-secondary">DevCon</h1>
-                    <h3>A social network for developers</h3>
-                    <a
-                        target="_blank"
-                        href="https://damp-spire-40434.herokuapp.com"
-                    >
-                        <img src="img/projects/DevCon.PNG" alt="Project" />
-                    </a>
-                    <a
-                        target="_blank"
-                        href="https://damp-spire-40434.herokuapp.com"
-                        class="btn-light"
-                    >
-                        <i class="fas fa-eye"></i> Project
-                    </a>
-                    <a
-                        target="_blank"
-                        href="https://github.com/kentiba/DevCon"
-                        class="btn-dark"
-                    >
-                        <i class="fab fa-github"></i> Github
-                    </a>
-                    <h3 class="subText">
-                        React , Bootstrap , Node , MongoDB
-                    </h3>
-                </div>
+      <div class="menu">
+        <div class="menu-branding">
+          <div class="portrait"></div>
+        </div>
+        <ul class="menu-nav">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item ">
+            <a href="about.html" class="nav-link">About Me</a>
+          </li>
+          <li class="nav-item current">
+            <a href="work.html" class="nav-link">My Work</a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link">How To Reach Me</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main id="work">
+      <h1 class="lg-heading">My<span class="text-secondary"> Work</span></h1>
+      <h2 class="sm-heading">
+        Check out some of my projects. You can find more on my github
+      </h2>
+      <div class="icons">
+        <a href="https://github.com/kentiba" target="_blank">
+          <i class="fab fa-github fa-2x"></i>
+        </a>
+      </div>
+      <div class="projects">
+        <div class="item">
+          <h1 class="text-secondary">DevCon</h1>
+          <h3>A social network for developers</h3>
+          <a target="_blank" href="https://damp-spire-40434.herokuapp.com">
+            <img src="img/projects/DevCon.PNG" alt="Project" />
+          </a>
+          <a
+            target="_blank"
+            href="https://damp-spire-40434.herokuapp.com"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Project
+          </a>
+          <a
+            target="_blank"
+            href="https://github.com/kentiba/DevCon"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+          <h3 class="subText">
+            React , Bootstrap , Node , MongoDB
+          </h3>
+        </div>
 
-                <div class="item">
-                    <h1 class="text-secondary">KenSale</h1>
-                    <h3>An online platform for selling livestock</h3>
-                    <a
-                        target="_blank"
-                        href="https://fathomless-inlet-52290.herokuapp.com/"
-                    >
-                        <img src="img/projects/KenSale.PNG" alt="Project" />
-                    </a>
-                    <a
-                        target="_blank"
-                        href="https://fathomless-inlet-52290.herokuapp.com/"
-                        class="btn-light"
-                    >
-                        <i class="fas fa-eye"></i> Project
-                    </a>
-                    <a
-                        target="_blank"
-                        href="https://github.com/kentiba/Animals-selling-project"
-                        class="btn-dark"
-                    >
-                        <i class="fab fa-github"></i> Github
-                    </a>
-                    <h3 class="subText">
-                        React , Bootstrap , Node , MySQL
-                    </h3>
-                </div>
+        <div class="item">
+          <h1 class="text-secondary">KenSale</h1>
+          <h3>An online platform for selling livestock</h3>
+          <a
+            target="_blank"
+            href="https://fathomless-inlet-52290.herokuapp.com/"
+          >
+            <img src="img/projects/KenSale.PNG" alt="Project" />
+          </a>
+          <a
+            target="_blank"
+            href="https://fathomless-inlet-52290.herokuapp.com/"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Project
+          </a>
+          <a
+            target="_blank"
+            href="https://github.com/kentiba/Animals-selling-project"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+          <h3 class="subText">
+            React , Bootstrap , Node , MySQL
+          </h3>
+        </div>
 
-                <div class="item">
-                    <h1 class="text-secondary">KenWallet</h1>
-                    <h3>
-                        A website where a company can keep notes on how much
-                        clients owe them
-                    </h3>
-                    <a
-                        target="_blank"
-                        href="https://clientpanelprod-35ea1.web.app/"
-                    >
-                        <img src="img/projects/KenWallet.PNG" alt="Project" />
-                    </a>
-                    <a
-                        target="_blank"
-                        href="https://clientpanelprod-35ea1.web.app/"
-                        class="btn-light"
-                    >
-                        <i class="fas fa-eye"></i> Project
-                    </a>
-                    <a
-                        target="_blank"
-                        href="https://github.com/kentiba/KenWallet"
-                        class="btn-dark"
-                    >
-                        <i class="fab fa-github"></i> Github
-                    </a>
-                    <h3 class="subText">
-                        Angular , Bootstrap , Firebase
-                    </h3>
-                </div>
+        <div class="item">
+          <h1 class="text-secondary">Hacker Next</h1>
+          <h3>
+            A hacker news clone made with Next js
+          </h3>
+          <a target="_blank" href="https://hacker-next.kentiba93.now.sh/">
+            <img src="img/projects/HackerNext.PNG" alt="Project" />
+          </a>
+          <a
+            target="_blank"
+            href="https://hacker-next.kentiba93.now.sh/"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Project
+          </a>
+          <a
+            target="_blank"
+            href="https://github.com/kentiba/Hacker-Next"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+          <h3 class="subText">
+            Next js , Node js
+          </h3>
+        </div>
+      </div>
+    </main>
 
-                <div class="item">
-                    <h1 class="text-secondary">Hacker Next</h1>
-                    <h3>
-                        A hacker news clone made with Next js
-                    </h3>
-                    <a
-                        target="_blank"
-                        href="https://hacker-next.kentiba93.now.sh/"
-                    >
-                        <img src="img/projects/HackerNext.PNG" alt="Project" />
-                    </a>
-                    <a
-                        target="_blank"
-                        href="https://hacker-next.kentiba93.now.sh/"
-                        class="btn-light"
-                    >
-                        <i class="fas fa-eye"></i> Project
-                    </a>
-                    <a
-                        target="_blank"
-                        href="https://github.com/kentiba/Hacker-Next"
-                        class="btn-dark"
-                    >
-                        <i class="fab fa-github"></i> Github
-                    </a>
-                    <h3 class="subText">
-                        Next js , Node js
-                    </h3>
-                </div>
-            </div>
-        </main>
-
-        <script src="js/main.js"></script>
-    </body>
+    <script src="js/main.js"></script>
+  </body>
 </html>
